force-app/main/default/objects/Finance__c/Finance__c.object-meta.xml
<CustomObject>
    <label>Finance</label>
    <nameField>
        <displayFormat>FINANCE-{0000}</displayFormat>
        <label>Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>