force-app/main/default/objects/Finance__c/fields/Account_number_UGA__c.field-meta.xml
<CustomField>
    <fullName>Account_number_UGA__c</fullName>
    <description>This was a request from Rachel to be able to put UGA Account Numbers. She calls it loan numbers but UGA calls it Account Number</description>
    <inlineHelpText>UGA Loan Number - Called Account Number by UGA</inlineHelpText>
    <label>Account_number_UGA</label>
    <length>14</length>
    <type>Text</type>
</CustomField>