force-app/main/default/objects/Finance__c/fields/Cancel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>