force-app/main/default/objects/Finance__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Buyer&apos;s Remorse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>