force-app/main/default/objects/Finance__c/fields/Cancel_Reversed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reversed_Amount__c</fullName>
    <description>Amount reclaimed by loan provider for a canceled loan.</description>
    <label>Cancel Reversed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>