force-app/main/default/objects/Finance__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>UGA Contract Number, starts with the Loan Account</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>