force-app/main/default/objects/Finance__c/fields/CT_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CT_Account_Number__c</fullName>
    <description>This is the account number assigned by the financing company. UGA for example.</description>
    <inlineHelpText>Field added per request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Account Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>