force-app/main/default/objects/Finance__c/fields/CT_Clawback_by_UGA_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Clawback_by_UGA_Amount__c</fullName>
    <description>This is the amount clawed back by UGA. This is not to be used for other finance companies.</description>
    <inlineHelpText>Field added per request from Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Clawback by UGA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>