force-app/main/default/objects/Finance__c/fields/CT_Clawback_UGA_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Clawback_UGA_Date__c</fullName>
    <description>The date UGA clawed back the financing. Not to be used with other finance companies.</description>
    <inlineHelpText>Field added by request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Clawback UGA Date</label>
    <type>Date</type>
</CustomField>