force-app/main/default/objects/Finance__c/fields/CT_Commission_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>CT_Commission_Date_Paid__c</fullName>
    <description>This is the date when the associated sales person was issued their commission.</description>
    <inlineHelpText>Added by request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Commission Date Paid</label>
    <type>Date</type>
</CustomField>