force-app/main/default/objects/Finance__c/fields/CT_Commissionable_Amount_Clawback__c.field-meta.xml
<CustomField>
    <fullName>CT_Commissionable_Amount_Clawback__c</fullName>
    <description>In the case of a clawback by the finance company this amount was subsequently clawed back from the sales person as a return of commission.</description>
    <inlineHelpText>Field added per request of Rachel on 29-Aug-29</inlineHelpText>
    <label>CT Commissionable Amount Clawback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>