force-app/main/default/objects/Finance__c/fields/CT_Commissionable_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>CT_Commissionable_amount_paid__c</fullName>
    <description>This is the value of the deal that is applied to the commission formula. This value time commision rate.</description>
    <inlineHelpText>Field added at the request of Rachel</inlineHelpText>
    <label>CT Commissionable Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>