force-app/main/default/objects/Finance__c/fields/CT_Commissionable_Clawback_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Commissionable_Clawback_Date__c</fullName>
    <description>This is the date that the commision was clawed back from the paid sales commision.</description>
    <inlineHelpText>Field added at the request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Commissionable Clawback Date</label>
    <type>DateTime</type>
</CustomField>