force-app/main/default/objects/Finance__c/fields/CT_Finance_Number__c.field-meta.xml
<CustomField>
    <fullName>CT_Finance_Number__c</fullName>
    <description>Fiance number</description>
    <inlineHelpText>Added per request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Finance Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>