force-app/main/default/objects/Finance__c/fields/CT_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Funded_Amount__c</fullName>
    <description>Amount funded by finance company</description>
    <inlineHelpText>Field added at the request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>