force-app/main/default/objects/Finance__c/fields/CT_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Funded_Date__c</fullName>
    <description>The date we saw the funded amount.</description>
    <inlineHelpText>Field added at the request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Funded Date</label>
    <type>Date</type>
</CustomField>