force-app/main/default/objects/Finance__c/fields/CT_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>CT_Sales_Type__c</fullName>
    <description>This is a rollup field pushed from the opportunity</description>
    <inlineHelpText>Field added per request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Sales Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>