force-app/main/default/objects/Finance__c/fields/CT_Startup_Fee__c.field-meta.xml
<CustomField>
    <fullName>CT_Startup_Fee__c</fullName>
    <description>This is the amount we charge in advance on a financed deal. This amount is commissionable.</description>
    <inlineHelpText>Field added at the request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Startup - Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>