force-app/main/default/objects/Finance__c/fields/CT_Total_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>CT_Total_Amount_Collected__c</fullName>
    <description>This field will be used only in PIF opportunities but included in all opportunities.</description>
    <inlineHelpText>Field added per request of Rachel on 29-Aug-22</inlineHelpText>
    <label>CT Total Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>