force-app/main/default/objects/Finance__c/fields/Finance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Finance_Charge__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;In_House&apos;,
0,
Amount_Financed__c - Initial_Amount_Due__c)</formula>
    <label>Finance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>