force-app/main/default/objects/Finance__c/fields/Initial_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount_Due__c</fullName>
    <label>Initial Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>