force-app/main/default/objects/Finance__c/fields/Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term__c</fullName>
    <label>Initial Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>