force-app/main/default/objects/Finance__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <description>Sales calls this the Loan Number in Sales, but it&apos;s the Account Number in the Finance Reports.</description>
    <label>Loan Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>