force-app/main/default/objects/Finance__c/fields/Original_Loan__c.field-meta.xml
<CustomField>
    <fullName>Original_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refunds, Cancels, or Addons</description>
    <label>Original Loan</label>
    <referenceTo>Finance__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>FinanceChild</relationshipName>
    <type>Lookup</type>
</CustomField>