force-app/main/default/objects/Finance__c/recordTypes/Adjustments.recordType-meta.xml
<RecordType>
    <fullName>Adjustments</fullName>
    <active>true</active>
    <description>Refunds, Chargebacks, and Adjustments</description>
    <label>Adjustments</label>
</RecordType>