force-app/main/default/objects/Finance__c/recordTypes/Ascentium.recordType-meta.xml
<RecordType>
    <fullName>Ascentium</fullName>
    <active>true</active>
    <label>Ascentium</label>
</RecordType>