force-app/main/default/objects/Finance__c/recordTypes/In_House.recordType-meta.xml
<RecordType>
    <fullName>In_House</fullName>
    <active>true</active>
    <label>In House</label>
</RecordType>