force-app/main/default/objects/Finance__c/recordTypes/UGA.recordType-meta.xml
<RecordType>
    <fullName>UGA</fullName>
    <active>true</active>
    <label>UGA</label>
</RecordType>